--- a/src/modules/page/nbaModelDetail/nbaModelDetail.css
+++ b/src/modules/page/nbaModelDetail/nbaModelDetail.css
@@ -16,7 +16,7 @@
 }
 
 .page-wrapper {
-    padding: 0 1rem;
+    padding: 0 1rem 4rem;
 }
 
 /* Page Header */
